--- a/ObamaTweetAgent.ipynb
+++ b/ObamaTweetAgent.ipynb
@@ -338,7 +338,7 @@
         "from google.colab import userdata\n",
         "\n",
         "# Recuperar la API Key desde Colab Secrets\n",
-        "api_key = userdata.get('quiqueapi')\n",
+        "api_key = userdata.get('############')\n",
         "\n",
         "# Asignarla a la variable de entorno que OpenAI necesita\n",
         "os.environ[\"OPENAI_API_KEY\"] = api_key\n",
